src/objects/District__c.object
<CustomObject>
    <fields>
        <fullName>District_Pin_Code__c</fullName>
        <label>District Pin Code</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District_State_Country__c</fullName>
        <formula>HYPERLINK(State_Name__r.Country_Name__c , State_Name__r.Country_Name__r.Name ,&quot;self&quot;) + &quot; -&gt; &quot;+ HYPERLINK(State_Name__c, State_Name__r.Name, &quot;_self&quot;)  +&quot; -&gt; &quot;+Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District State Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <label>State Name</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Districts</relationshipLabel>
        <relationshipName>Districts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>District</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>District  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Districts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>